adding auth-service
